--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div align="center">
-    <font size="5"><b>MyBlog Login</b></font><br>
+    <font size="5"><b>Music Blog Login</b></font><br>
 
     <font size="2">
     </font>
