--- a/templates/specific_posts.html
+++ b/templates/specific_posts.html
@@ -8,11 +8,11 @@
         {% elif purpose == "blogpost" %}
         {{ list_of_posts[0].title }}
         {% endif %}
-         - MyBlog</title>
+         - Music Blog</title>
 </head>
 <body>
 <div align="center">
-<font size="5"><b>MyBlog - {% if purpose == "category" %}
+<font size="5"><b>Music Blog - {% if purpose == "category" %}
         Category: {{ category }}
         {% elif purpose == "blogpost" %}
         {{ list_of_posts[0].title }}
