--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/static/style.css">
-    <title>Dashboard - MyBlog</title>
+    <title>Dashboard - Music Blog</title>
 </head>
 <body>
 <div align="center">
-<font size="5"><b>MyBlog Dashboard</b></font><br>
+<font size="5"><b>Music Blog Dashboard</b></font><br>
 
 <font size="2">
     <b>User: </b>{{ username }} |
