--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/static/style.css">
-    <title>Public Posts - MyBlog</title>
+    <title>Public Posts - Music Blog</title>
 </head>
 <body>
 
 <div align="center">
-<font size="5"><b>MyBlog Posts</b></font><br>
+<font size="5"><b>Music Blog Posts</b></font><br>
 <font size="2">
     <b>User:</b> {{ username }} |
     {% if not logged_in %}
